# Probe_Research

./: .gitignore  DISCLAIMER.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
docs/: extraction-spec.md  prompts.md  radiologist-eval-protocol.md
paper/: skeleton.md
scripts/: 01_reflacx_explore.py  02_medgemma_layer_pilot.py
scripts/modal/: 00_download_data.py  00_download_vindr.py  02_medgemma_layer_pilot.py  02b_random_baseline.py  03_llavamed_layer_pilot.py  03b_llavamed_prompt_sensitivity.py  04_maira2_layer_pilot.py
src/: __init__.py
src/attn/: __init__.py  base.py  extract_llavamed.py  extract_maira2.py  extract_medgemma.py
src/metrics/: __init__.py  alignment.py  rasterize.py
tests/: test_alignment.py  test_rasterize.py
