[project]
name = "gazeprobe"
version = "0.0.1"
description = "Cross-model attention-faithfulness audit of medical VLMs vs radiologist gaze."
readme = "README.md"
requires-python = ">=3.10,<3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
